Added social and resources

--- a/resume/index.html
+++ b/resume/index.html
@@ -37,7 +37,7 @@
 				
 				<p>
 					Hey, I'm Josh and I'm passionate about learning and creating. <br />
-					I am an undergraduate at the University of Florida pursuing a Bachelors of Science degree
+					I'm an undergraduate at the University of Florida pursuing a Bachelors of Science degree
 					 in computer science. <br /> 
 					 I also have a Bachelors of Science degree in psychology from Washington State University. <br />
 					 My primary interests are in security, especially techniques and events in the reverse engineering scene. <br />
