--- a/psych/index.html
+++ b/psych/index.html
@@ -33,9 +33,9 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="#intro" class="active">Introduction</a></li>
-							<li><a href="#first">Resources</a></li>
-							<li><a href="#second">Second Section</a></li>
-							<li><a href="#cta">Get Started</a></li>
+							<li><a href="#first">Links to Social</a></li>
+							<li><a href="#second">Resources</a></li>
+							<li><a href="#cta">Contact</a></li>
 						</ul>
 					</nav>
 
@@ -71,7 +71,7 @@
 						<!-- First Section -->
 							<section id="first" class="main special">
 								<header class="major">
-									<h2>Resources</h2>
+									<h2>Social</h2>
 								</header>
 								<ul class="features">
 									<li>
@@ -81,20 +81,29 @@
 											</a>
 										</span>
 										<h3>Research Gate</h3>
-										<p>Here you will find resources containing my written work in academia. Such resources include
+										<p>Here you will find resources containing my written work, such as
 											experimental discussions and statistical analysis, technical reports, vulnerability assessments, 
-											and various other works.
+											etc.
 										</p>
 									</li>
 									<li>
-										<span class="icon major style3 fa-copy"></span>
-										<h3>Amed sed feugiat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<span class="image">
+											<a href="https://github.com/joshuamainsmith">
+												<img style="height: 225px; border-radius: 50%;" src="images/GitHub-Mark-120px-plus.png" alt="" />
+											</a>
+										</span>
+										<h3>GitHub</h3>
+										<p>Here you will find several programming and technical projects I've completed over the years. 
+											Included are writeups, reports and academic assignments.</p>
 									</li>
 									<li>
-										<span class="icon major style5 fa-gem"></span>
-										<h3>Dolor nullam</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<span class="image">
+											<a href="https://www.linkedin.com/in/joshuamainsmith/">
+												<img style="height: 225px; border-radius: 50%;" src="images/social-linkedin-circle-512.webp" alt="" />
+											</a>
+										</span>
+										<h3>LinkedIn</h3>
+										<p>Here is my LinkedIn page. Feel free to take a look around or contact me through there if you prefer.</p>
 									</li>
 								</ul>
 								<footer class="major">
@@ -107,30 +116,39 @@
 						<!-- Second Section -->
 							<section id="second" class="main special">
 								<header class="major">
-									<h2>Ipsum consequat</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<h2>Resources</h2>
+									<p>A select few of my written work ranging from fairly recent (2019)<br />
+										to several years ago (2011). Topics include critical analysis, <br />
+										surveys and experimental study. Visit <a href="https://www.researchgate.net/profile/Joshua_Smith93">ResearchGate</a> for more.
+									</p>
 								</header>
 								<ul class="statistics">
 									<li class="style1">
-										<span class="icon solid fa-code-branch"></span>
-										<strong>5,120</strong> Etiam
+										<span></span>
+										<a href="https://www.researchgate.net/publication/329074740_On_Canavan_Disease">
+											<strong>	Canavan Disease</strong> Historical Progression and Current Analysis
+										</a>
 									</li>
 									<li class="style2">
-										<span class="icon fa-folder-open"></span>
-										<strong>8,192</strong> Magna
+										<!--<span class="icon fa-folder-open"></span>-->
+										<a href="https://www.researchgate.net/publication/329629443_The_Effects_of_Positive_Reinforcement_on_Mood">
+											<strong>	PR and Mood</strong> Study on Effects of Mood and Positive Reinforcement
+										</a>
 									</li>
 									<li class="style3">
-										<span class="icon solid fa-signal"></span>
-										<strong>2,048</strong> Tempus
+										<a href="https://www.researchgate.net/publication/339585888_Cell-Phone_Addiction">
+											<strong>	Cellular Addiction</strong>Survey in Cell Phone Addiction and GPA
+										</a>
 									</li>
 									<li class="style4">
-										<span class="icon solid fa-laptop"></span>
-										<strong>4,096</strong> Aliquam
+										<a href="https://www.researchgate.net/publication/329629515_Brain_Serotonin_Transporter_in_Human_Methamphetamine_Users">
+											<strong>	Serotonin and Meth</strong> Meth User Serotonin Transporters
+										</a>
 									</li>
 									<li class="style5">
-										<span class="icon fa-gem"></span>
-										<strong>1,024</strong> Nullam
+										<a href="https://www.researchgate.net/publication/329629478_Effects_of_Teratogens">
+											<strong>	Effects of Teratogens</strong> Analysis on the Physiological Effects of Teratogens
+										</a>
 									</li>
 								</ul>
 								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
@@ -144,9 +162,8 @@
 						<!-- Get Started -->
 							<section id="cta" class="main special">
 								<header class="major">
-									<h2>Congue imperdiet</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<h2>Contact</h2>
+									<p></p>
 								</header>
 								<footer class="major">
 									<ul class="actions special">
