Finished resources and added contact

--- a/resume/index.html
+++ b/resume/index.html
@@ -258,8 +258,9 @@
 			<article id="four" class="container box style3">
 				<header>
 					<h2>Contact Information</h2>
-					<p>The best way to contact me would be through email: <a href = "mailto: joshuamainsmith@gmail.com">joshuamainsmith@gmail.com</a> <br />
-					Or to text or call at (509) 397-8439. <br />
+					<p>You can reach me through <br />
+					email: <a href = "mailto: joshuamainsmith@gmail.com">joshuamainsmith@gmail.com</a> <br />
+					Or phone at (509) 397-8439. <br />
 					I'm looking forward to hearing from you! <br />
 					Josh
 					</p>
