--- a/psych/index.html
+++ b/psych/index.html
@@ -60,9 +60,11 @@
 											statistical programming (R) and software (SPSS), developmental psychology, social psychology,
 											interdisciplinary neuroscience, organic chemistry, and more.
 										</p>
+										<!--
 										<ul class="actions">
 											<li><a href="generic.html" class="button">Learn More</a></li>
 										</ul>
+										-->
 									</div>
 									<span class="image"><img src="images/img.png" alt="" /></span>
 								</div>
@@ -107,9 +109,11 @@
 									</li>
 								</ul>
 								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
+									<!--
+										<ul class="actions">
+											<li><a href="generic.html" class="button">Learn More</a></li>
+										</ul>
+										-->
 								</footer>
 							</section>
 
@@ -151,11 +155,20 @@
 										</a>
 									</li>
 								</ul>
-								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
+								<p class="content">
+									The above works provide a general overview on the work I have contributed toward the field of psychology
+									or neurology. Feel free to explore other contributions in other fields of study during my academic studies.
+									If you would like to view samples of my most recently written works, visit my 
+									<a href="https://github.com/joshuamainsmith/writeups">GitHub</a> page where there is a repository containing technical
+									writeups of my penetration testing reports and computer security Windows Server 2012 guides (both from Winter 2020).									
+									
+								</p>
 								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
+									<!--
+										<ul class="actions">
+											<li><a href="generic.html" class="button">Learn More</a></li>
+										</ul>
+										-->
 								</footer>
 							</section>
 
@@ -163,13 +176,21 @@
 							<section id="cta" class="main special">
 								<header class="major">
 									<h2>Contact</h2>
-									<p></p>
+									<p>
+										The best way to reach me would be by <br />
+										email: <a href = "mailto: joshuamainsmith@gmail.com">joshuamainsmith@gmail.com</a> <br />
+										or by phone: (509) 397-8439 <br />
+										I look forward to hearing from you! <br />
+										Josh
+									</p>
 								</header>
 								<footer class="major">
+									<!--
 									<ul class="actions special">
 										<li><a href="generic.html" class="button primary">Get Started</a></li>
 										<li><a href="generic.html" class="button">Learn More</a></li>
 									</ul>
+									-->
 								</footer>
 							</section>
 
@@ -178,21 +199,26 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<h2>Aliquam sed mauris</h2>
-							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
+							<h2>TL;DR</h2>
+							<p>
+								Joshua Smith is a student of psychology and computer science that is passionate
+								about growing and creating. I believe that small changes that one can make 
+								in themself can cascade into larger changes in the collective. Building a castle
+								requires moving small stones.
+							</p>
+							<!--
 							<ul class="actions">
 								<li><a href="generic.html" class="button">Learn More</a></li>
 							</ul>
+							-->
 						</section>
 						<section>
-							<h2>Etiam feugiat</h2>
+							<h2>Contact Info</h2>
 							<dl class="alt">
-								<dt>Address</dt>
-								<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
 								<dt>Phone</dt>
-								<dd>(000) 000-0000 x 0000</dd>
+								<dd>(509) 397-8439</dd>
 								<dt>Email</dt>
-								<dd><a href="#">information@untitled.tld</a></dd>
+								<dd><a href="mailto: joshuamainsmith@gmail.com">joshuamainsmith@gmail.com</a></dd>
 							</dl>
 							<ul class="icons">
 								<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
