--- a/psych/index.html
+++ b/psych/index.html
@@ -22,10 +22,9 @@
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/mandalab.jpg" alt="" /></span>
 						<h1>Joshua Smith</h1>
-						<p>There will always be rocks in the road ahead of us. <br />
-						They will be stumbling blocks or stepping stones; <br />
-						it all depends on how you use them. <br />
-						-Friedrich Nietzsche</p>
+						<p>In the midst of winter, I found there was, within me, an invincible summer. <br />
+							-Albert Camus
+						</p>
 					
 					</header>
 
