--- a/resume/index.html
+++ b/resume/index.html
@@ -19,10 +19,9 @@
 			<section id="header">
 				<header>
 					<h1>Joshua Smith</h1>
-					<p>There will always be rocks in the road ahead of us. <br />
-						They will be stumbling blocks or stepping stones; <br />
-						it all depends on how you use them.</p>
-					-Friedrich Nietzsche
+					<p>In the midst of winter, I found there was, within me, an invincible summer. <br />
+						</p>
+					-Albert Camus
 				</header>
 				<footer>
 					<a href="#banner" class="button style2 scrolly-middle">About Me</a>
