Added a few more projects

--- a/resume/index.html
+++ b/resume/index.html
@@ -57,8 +57,8 @@
 			</section>
 
 		<!-- Feature 1 -->
-			<article id="first" class="container box style1 right">
-				<a href="https://team3-career-finder.herokuapp.com/" class="image fit"><img src="images/CF2.jpg" alt="" /></a>
+			<article id="first" class="container box style3 right">
+				<a href="https://team3-career-finder.herokuapp.com/" class="image fit"><img src="images/CF.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
 						<h2>Career Finder
@@ -70,8 +70,68 @@
 				</div>
 			</article>
 
+			<!-- Feature 2 -->
+			<article class="container box style3 left">
+				<a href="https://github.com/joshuamainsmith/Senior_Project" class="image fit">
+					<img src="images/LDBPWNER.jpg" alt="" /></a>
+				<div class="inner">
+					<header>
+						<h2>Senior Project
+						</h2>
+					</header>
+					<p>Statically and dynamically analyzed Respondus LockDown Browser's binaries. We then used our our findings to bypass
+						LDB's security by creating software, such as a DLL injector and various scripts.
+					</p>
+				</div>
+			</article>
+
+			<!-- Feature 2 -->
+			<article class="container box style3 left">
+				<a href="https://github.com/joshuamainsmith/School-Work/tree/master/COP-4600-Operating-Systems/Projects/P1" class="image fit">
+					<img src="images/syscall.jpg" alt="" /></a>
+				<div class="inner">
+					<header>
+						<h2>System Calls
+						</h2>
+					</header>
+					<p>Statically and dynamically analyzed Respondus LockDown Browser's binaries. We then used our our findings to bypass
+						LDB's security by creating software, such as a DLL injector and various scripts.
+					</p>
+				</div>
+			</article>
+
+			<!-- Feature 2 -->
+			<article class="container box style3 left">
+				<a href="https://github.com/joshuamainsmith/School-Work/tree/master/COP-4600-Operating-Systems/Projects/P2" class="image fit">
+					<img src="images/posix.png" alt="" /></a>
+				<div class="inner">
+					<header>
+						<h2>Android App with POSIX Implementation
+						</h2>
+					</header>
+					<p>Statically and dynamically analyzed Respondus LockDown Browser's binaries. We then used our our findings to bypass
+						LDB's security by creating software, such as a DLL injector and various scripts.
+					</p>
+				</div>
+			</article>
+
+			<!-- Feature 2 -->
+			<article class="container box style3 left">
+				<a href="https://github.com/joshuamainsmith/School-Work/tree/master/COP-4600-Operating-Systems/Projects/P3" class="image fit">
+					<img src="images/wad.jpg" alt="" /></a>
+				<div class="inner">
+					<header>
+						<h2>WAD File Data Parser with FUSE
+						</h2>
+					</header>
+					<p>Statically and dynamically analyzed Respondus LockDown Browser's binaries. We then used our our findings to bypass
+						LDB's security by creating software, such as a DLL injector and various scripts.
+					</p>
+				</div>
+			</article>
+
 		<!-- Feature 2 -->
-			<article class="container box style1 left">
+			<article class="container box style3 left">
 				<a href="https://github.com/joshuamainsmith/writeups/tree/master/Penetration-Testing-CIS4204" class="image fit"><img src="images/WU.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
@@ -86,7 +146,7 @@
 			</article>
 			
 			<!-- Feature 3 -->
-			<article class="container box style1 right">
+			<article class="container box style3 right">
 				<a href="https://github.com/joshuamainsmith/Windows_API_Hacking" class="image fit"><img src="images/WAPI.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
@@ -99,8 +159,8 @@
 			</article>
 
 			<!-- Feature 4 -->
-			<article class="container box style1 left">
-				<a href="https://github.com/joshuamainsmith/Object_Oriented_Programming/tree/master/Project%202" class="image fit"><img src="images/IP.jpg" alt="" /></a>
+			<article class="container box style3 left">
+				<a href="https://github.com/joshuamainsmith/School-Work/tree/master/COP-3503-Programming-Fundamentals/Project%202%20-%20Image%20Processor" class="image fit"><img src="images/IP.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
 						<h2>Image Processor
@@ -113,8 +173,8 @@
 			</article>
 
 			<!-- Feature 5 -->
-			<article class="container box style1 right">
-				<a href="https://github.com/joshuamainsmith/Object_Oriented_Programming/tree/master/Project%203" class="image fit"><img src="images/MS.jpg" alt="" /></a>
+			<article class="container box style3 right">
+				<a href="https://github.com/joshuamainsmith/School-Work/tree/master/COP-3503-Programming-Fundamentals/Project%203%20-%20Minesweeper" class="image fit"><img src="images/MS.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
 						<h2>Minesweeper
@@ -159,7 +219,7 @@
 							</tr>
 							<tr>
 								<td>Malware Reverse Engineering</td>
-								<td>Current</td>
+								<td>Completed</td>
 								<td>Penetration Testning</td>
 								<td>Completed</td>
 							</tr>							
@@ -189,13 +249,13 @@
 							</tr>
 							<tr>
 								<td>Programming Languages</td>
-								<td>Current</td>
+								<td>Completed</td>
 								<td>Operating Systems</td>
-								<td>Needed</td>
+								<td>Completed</td>
 							</tr>
 							<tr>
 								<td>Senior Project</td>
-								<td>Needed</td>
+								<td>Completed</td>
 								<td>Differential Equations</td>
 								<td>Completed</td>
 							</tr>
