Added project index

--- a/resume/index.html
+++ b/resume/index.html
@@ -56,9 +56,65 @@
 				</footer>
 			</section>
 
+			<article id="first" class="container box style3">
+				<header>
+					<h3>Project Index</h3>
+				</header>
+				<section>
+					<div class="table-wrapper">
+						<table>
+							<thead>
+								<tr>
+									<th>Project Name</th>
+									<th>Description</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td><a href="#P0" class="style2">Career Finder</a></td>
+									<td>Completed</td>
+								</tr>
+								<tr>
+									<td><a href="#P1" class="style2">Senior Project</a></td>
+									<td>Completed</td>
+								</tr>							
+								<tr>
+									<td><a href="#P2" class="style2">System Calls</a></td>
+									<td>Completed</td>
+								</tr>							
+								<tr>
+									<td><a href="#P3" class="style2">Android App</a></td>
+									<td>Completed</td>
+								</tr>
+								<tr>
+									<td><a href="#P4" class="style2">WAD Data Retriever</a></td>
+									<td>Completed</td>
+								</tr>
+								<tr>
+									<td><a href="#P5" class="style2">Pentesting Writeups</a></td>
+									<td>Completed</td>
+								</tr>
+								<tr>
+									<td><a href="#P6" class="style2">Windows API Hacks</a></td>
+									<td>Completed</td>
+								</tr>
+								<tr>
+									<td><a href="#P7" class="style2">Image Processor</a></td>
+									<td>Completed</td>
+								</tr>
+								<tr>
+									<td><a href="#P8" class="style2">Minesweeper</a></td>
+									<td>Completed</td>
+								</tr>
+							</tbody>						
+						</table>
+					</div>
+				</section>
+			</article>
+
 		<!-- Feature 1 -->
-			<article id="first" class="container box style3 right">
-				<a href="https://team3-career-finder.herokuapp.com/" class="image fit"><img src="images/CF.jpg" alt="" /></a>
+			<article class="container box style3 right">
+				<a href="https://team3-career-finder.herokuapp.com/" id="P0" class="image fit"><img src="images/CF.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
 						<h2>Career Finder
@@ -67,12 +123,13 @@
 					<p>A web app developed during the Software Engineering course taken at the University of Florida. 
 						Links to the <a href="https://github.com/joshuamainsmith/CEN_3031_Final_Project">GitHub Repo</a> & 
 						<a href="https://www.researchgate.net/publication/341913693_Career_Finder_SRS_Document">documentation</a>.</p>
+						<p><a href="#first" class="style2">Back to Index</a></p>
 				</div>
 			</article>
 
 			<!-- Feature 2 -->
 			<article class="container box style3 left">
-				<a href="https://github.com/joshuamainsmith/Senior_Project" class="image fit">
+				<a href="https://github.com/joshuamainsmith/Senior_Project" id="P1" class="image fit">
 					<img src="images/LDBPWNER.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
@@ -82,12 +139,13 @@
 					<p>Statically and dynamically analyzed Respondus LockDown Browser's binaries. We then used our our findings to bypass
 						LDB's security by creating software, such as a DLL injector and various scripts.
 					</p>
+					<p><a href="#first" class="style2">Back to Index</a></p>
 				</div>
 			</article>
 
 			<!-- Feature 2 -->
 			<article class="container box style3 left">
-				<a href="https://github.com/joshuamainsmith/School-Work/tree/master/COP-4600-Operating-Systems/Projects/P1" class="image fit">
+				<a href="https://github.com/joshuamainsmith/School-Work/tree/master/COP-4600-Operating-Systems/Projects/P1" id="P2" class="image fit">
 					<img src="images/syscall.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
@@ -97,12 +155,13 @@
 					<p>Statically and dynamically analyzed Respondus LockDown Browser's binaries. We then used our our findings to bypass
 						LDB's security by creating software, such as a DLL injector and various scripts.
 					</p>
+					<p><a href="#first" class="style2">Back to Index</a></p>
 				</div>
 			</article>
 
 			<!-- Feature 2 -->
 			<article class="container box style3 left">
-				<a href="https://github.com/joshuamainsmith/School-Work/tree/master/COP-4600-Operating-Systems/Projects/P2" class="image fit">
+				<a href="https://github.com/joshuamainsmith/School-Work/tree/master/COP-4600-Operating-Systems/Projects/P2" id="P3" class="image fit">
 					<img src="images/posix.png" alt="" /></a>
 				<div class="inner">
 					<header>
@@ -112,12 +171,13 @@
 					<p>Statically and dynamically analyzed Respondus LockDown Browser's binaries. We then used our our findings to bypass
 						LDB's security by creating software, such as a DLL injector and various scripts.
 					</p>
+					<p><a href="#first" class="style2">Back to Index</a></p>
 				</div>
 			</article>
 
 			<!-- Feature 2 -->
 			<article class="container box style3 left">
-				<a href="https://github.com/joshuamainsmith/School-Work/tree/master/COP-4600-Operating-Systems/Projects/P3" class="image fit">
+				<a href="https://github.com/joshuamainsmith/School-Work/tree/master/COP-4600-Operating-Systems/Projects/P3" id="P4" class="image fit">
 					<img src="images/wad.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
@@ -127,12 +187,13 @@
 					<p>Statically and dynamically analyzed Respondus LockDown Browser's binaries. We then used our our findings to bypass
 						LDB's security by creating software, such as a DLL injector and various scripts.
 					</p>
+					<p><a href="#first" class="style2">Back to Index</a></p>
 				</div>
 			</article>
 
 		<!-- Feature 2 -->
 			<article class="container box style3 left">
-				<a href="https://github.com/joshuamainsmith/writeups/tree/master/Penetration-Testing-CIS4204" class="image fit"><img src="images/WU.jpg" alt="" /></a>
+				<a href="https://github.com/joshuamainsmith/writeups/tree/master/Penetration-Testing-CIS4204" id="P5" class="image fit"><img src="images/WU.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
 						<h2>Penetration Testing Writeups
@@ -142,25 +203,28 @@
 						Includes a general survey of various pentesting techniques.
 
 					</p>
+					<p><a href="#first" class="style2">Back to Index</a></p>
 				</div>
 			</article>
 			
 			<!-- Feature 3 -->
 			<article class="container box style3 right">
-				<a href="https://github.com/joshuamainsmith/Windows_API_Hacking" class="image fit"><img src="images/WAPI.jpg" alt="" /></a>
+				<a href="https://github.com/joshuamainsmith/Windows_API_Hacking" id="P6" class="image fit"><img src="images/WAPI.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
 						<h2>Windows API
 						</h2>
 					</header>
 					<p>Several small programs that take advantage of various aspects of the Windows API, such as impersonation, token privilege escalation,
-						process manipulation, undocumented syscalls, etc.
+						process manipulation, undocumented syscalls, etc.</p>
+					<p><a href="#first" class="style2">Back to Index</a></p>
 				</div>
 			</article>
 
 			<!-- Feature 4 -->
 			<article class="container box style3 left">
-				<a href="https://github.com/joshuamainsmith/School-Work/tree/master/COP-3503-Programming-Fundamentals/Project%202%20-%20Image%20Processor" class="image fit"><img src="images/IP.jpg" alt="" /></a>
+				<a href="https://github.com/joshuamainsmith/School-Work/tree/master/COP-3503-Programming-Fundamentals/Project%202%20-%20Image%20Processor" 
+				id="P7" class="image fit"><img src="images/IP.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
 						<h2>Image Processor
@@ -169,12 +233,14 @@
 					<p>An image processing tool that modifies TGA files with various parameters, such a blending, overlays, color tinting, etc.
 						See the <a href="https://github.com/joshuamainsmith/Object_Oriented_Programming/tree/master/Project%202/Release">release</a> 
 						and <a href="https://github.com/joshuamainsmith/Object_Oriented_Programming/blob/master/Project%202/ImageProcessing.pdf">documentation</a>.</p>
+						<p><a href="#first" class="style2">Back to Index</a></p>
 				</div>
 			</article>
 
 			<!-- Feature 5 -->
 			<article class="container box style3 right">
-				<a href="https://github.com/joshuamainsmith/School-Work/tree/master/COP-3503-Programming-Fundamentals/Project%203%20-%20Minesweeper" class="image fit"><img src="images/MS.jpg" alt="" /></a>
+				<a href="https://github.com/joshuamainsmith/School-Work/tree/master/COP-3503-Programming-Fundamentals/Project%203%20-%20Minesweeper" 
+				id="P8" class="image fit"><img src="images/MS.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
 						<h2>Minesweeper
@@ -183,11 +249,12 @@
 					<p>A recreation of the famous Minesweeper game, complete with debugging and test benches. This was built using 
 						<a href="https://www.sfml-dev.org">SFML</a>. 
 						See the <a href="https://github.com/joshuamainsmith/Object_Oriented_Programming/tree/master/Project%203/Release">release</a>.</p>
+						<p><a href="#first" class="style2">Back to Index</a></p>
 				</div>
 			</article>
 
 			<!-- Academic Schedule -->
-			<article id="second" class="container box style3">
+		<article id="second" class="container box style3">
 			<section>
 				<header>
 					<h2>Academic Progress</h2>
