Added descriptions for projects

--- a/resume/index.html
+++ b/resume/index.html
@@ -72,39 +72,39 @@
 							<tbody>
 								<tr>
 									<td><a href="#P0" class="style2">Career Finder</a></td>
-									<td>Completed</td>
+									<td>A reactive website created during my software engineering course using the MERN stack</td>
 								</tr>
 								<tr>
 									<td><a href="#P1" class="style2">Senior Project</a></td>
-									<td>Completed</td>
+									<td>Software created to bypass the security measures implemented by LockDown Browser's API</td>
 								</tr>							
 								<tr>
 									<td><a href="#P2" class="style2">System Calls</a></td>
-									<td>Completed</td>
+									<td>Implemented system calls to be called from static library functions</td>
 								</tr>							
 								<tr>
 									<td><a href="#P3" class="style2">Android App</a></td>
-									<td>Completed</td>
+									<td>App that utilizes the POSIX library system library procedures</td>
 								</tr>
 								<tr>
 									<td><a href="#P4" class="style2">WAD Data Retriever</a></td>
-									<td>Completed</td>
+									<td>A userspace filestystem that uses FUSE to access WAD file data</td>
 								</tr>
 								<tr>
 									<td><a href="#P5" class="style2">Pentesting Writeups</a></td>
-									<td>Completed</td>
+									<td>Various writeups that demonstrate common penetration testing methodologies</td>
 								</tr>
 								<tr>
 									<td><a href="#P6" class="style2">Windows API Hacks</a></td>
-									<td>Completed</td>
+									<td>Techniques taking advantage of system procedures utilizing the Windows API</td>
 								</tr>
 								<tr>
 									<td><a href="#P7" class="style2">Image Processor</a></td>
-									<td>Completed</td>
+									<td>A TGA image modification tool</td>
 								</tr>
 								<tr>
 									<td><a href="#P8" class="style2">Minesweeper</a></td>
-									<td>Completed</td>
+									<td>Recreation of the popular Minesweeper game, complete with debugging and test benches</td>
 								</tr>
 							</tbody>						
 						</table>
@@ -117,12 +117,12 @@
 				<a href="https://team3-career-finder.herokuapp.com/" id="P0" class="image fit"><img src="images/CF.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
-						<h2>Career Finder
+						<h2><a href="https://team3-career-finder.herokuapp.com/">Career Finder</a>
 						</h2>
 					</header>
 					<p>A web app developed during the Software Engineering course taken at the University of Florida. 
 						Links to the <a href="https://github.com/joshuamainsmith/CEN_3031_Final_Project">GitHub Repo</a> & 
-						<a href="https://www.researchgate.net/publication/341913693_Career_Finder_SRS_Document">documentation</a>.</p>
+						<a href="https://www.researchgate.net/publication/341913693_Career_Finder_SRS_Document">documentation</a>. Use admin1/admin1 to login.</p>
 						<p><a href="#first" class="style2">Back to Index</a></p>
 				</div>
 			</article>
@@ -133,7 +133,7 @@
 					<img src="images/LDBPWNER.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
-						<h2>Senior Project
+						<h2><a href="https://github.com/joshuamainsmith/Senior_Project">Senior Project</a>
 						</h2>
 					</header>
 					<p>Statically and dynamically analyzed Respondus LockDown Browser's binaries. We then used our our findings to bypass
@@ -143,60 +143,66 @@
 				</div>
 			</article>
 
-			<!-- Feature 2 -->
+			<!-- Feature 3 -->
 			<article class="container box style3 left">
 				<a href="https://github.com/joshuamainsmith/School-Work/tree/master/COP-4600-Operating-Systems/Projects/P1" id="P2" class="image fit">
 					<img src="images/syscall.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
-						<h2>System Calls
+						<h2><a href="https://github.com/joshuamainsmith/School-Work/tree/master/COP-4600-Operating-Systems/Projects/P1">System Calls</a>
 						</h2>
 					</header>
-					<p>Statically and dynamically analyzed Respondus LockDown Browser's binaries. We then used our our findings to bypass
-						LDB's security by creating software, such as a DLL injector and various scripts.
+					<p>Implemented system calls in an Ubuntu fork along with three static library functions that 
+						allow the system call to be invoked from a C API. These system calls get and set a custom 
+						process log level that sits atop the standard Linux kernel’s diagnostic message logging system (dmesg)
+						and allows processes to submit log entries along with a log level.
 					</p>
 					<p><a href="#first" class="style2">Back to Index</a></p>
 				</div>
 			</article>
 
-			<!-- Feature 2 -->
+			<!-- Feature 4 -->
 			<article class="container box style3 left">
 				<a href="https://github.com/joshuamainsmith/School-Work/tree/master/COP-4600-Operating-Systems/Projects/P2" id="P3" class="image fit">
 					<img src="images/posix.png" alt="" /></a>
 				<div class="inner">
 					<header>
-						<h2>Android App with POSIX Implementation
+						<h2><a href="https://github.com/joshuamainsmith/School-Work/tree/master/COP-4600-Operating-Systems/Projects/P2">Android App with POSIX Implementation</a>
 						</h2>
 					</header>
-					<p>Statically and dynamically analyzed Respondus LockDown Browser's binaries. We then used our our findings to bypass
-						LDB's security by creating software, such as a DLL injector and various scripts.
+					<p>A C++ language function that calls POSIX system library procedures to read a text
+						file and return it as a C-style string. Also contains two programs that use
+						C++ functions – a program at the Android application layer that uses the NDK binding to call the
+						C++ functions to read and display a text file in an application window, and another version that will print the text
+						file to the screen in Ubuntu.
 					</p>
 					<p><a href="#first" class="style2">Back to Index</a></p>
 				</div>
 			</article>
 
-			<!-- Feature 2 -->
+			<!-- Feature 5 -->
 			<article class="container box style3 left">
 				<a href="https://github.com/joshuamainsmith/School-Work/tree/master/COP-4600-Operating-Systems/Projects/P3" id="P4" class="image fit">
 					<img src="images/wad.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
-						<h2>WAD File Data Parser with FUSE
+						<h2><a href="https://github.com/joshuamainsmith/School-Work/tree/master/COP-4600-Operating-Systems/Projects/P3">WAD File Data Parser with FUSE</a>
 						</h2>
 					</header>
-					<p>Statically and dynamically analyzed Respondus LockDown Browser's binaries. We then used our our findings to bypass
-						LDB's security by creating software, such as a DLL injector and various scripts.
+					<p>Implemented a userspace filesystem daemon using the FUSE (Filesystem in UserSpacE)
+						API to access data in WAD format. Implements read-only access to files and
+						directories within the WAD files as a proof-of-concept.
 					</p>
 					<p><a href="#first" class="style2">Back to Index</a></p>
 				</div>
 			</article>
 
-		<!-- Feature 2 -->
+		<!-- Feature 6 -->
 			<article class="container box style3 left">
 				<a href="https://github.com/joshuamainsmith/writeups/tree/master/Penetration-Testing-CIS4204" id="P5" class="image fit"><img src="images/WU.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
-						<h2>Penetration Testing Writeups
+						<h2><a href="https://github.com/joshuamainsmith/writeups/tree/master/Penetration-Testing-CIS4204">Penetration Testing Writeups</a>
 						</h2>
 					</header>
 					<p>A series of reports written during the Penetration Testing course taken at the University of Florida. 
@@ -207,12 +213,12 @@
 				</div>
 			</article>
 			
-			<!-- Feature 3 -->
+			<!-- Feature 7 -->
 			<article class="container box style3 right">
 				<a href="https://github.com/joshuamainsmith/Windows_API_Hacking" id="P6" class="image fit"><img src="images/WAPI.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
-						<h2>Windows API
+						<h2><a href="https://github.com/joshuamainsmith/Windows_API_Hacking">Windows API</a>
 						</h2>
 					</header>
 					<p>Several small programs that take advantage of various aspects of the Windows API, such as impersonation, token privilege escalation,
@@ -221,13 +227,14 @@
 				</div>
 			</article>
 
-			<!-- Feature 4 -->
+			<!-- Feature 8 -->
 			<article class="container box style3 left">
 				<a href="https://github.com/joshuamainsmith/School-Work/tree/master/COP-3503-Programming-Fundamentals/Project%202%20-%20Image%20Processor" 
 				id="P7" class="image fit"><img src="images/IP.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
-						<h2>Image Processor
+						<h2><a href="https://github.com/joshuamainsmith/School-Work/tree/master/COP-3503-Programming-Fundamentals/Project%202%20-%20Image%20Processor">
+							Image Processor</a>
 						</h2>
 					</header>
 					<p>An image processing tool that modifies TGA files with various parameters, such a blending, overlays, color tinting, etc.
@@ -243,7 +250,8 @@
 				id="P8" class="image fit"><img src="images/MS.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
-						<h2>Minesweeper
+						<h2><a href="https://github.com/joshuamainsmith/School-Work/tree/master/COP-3503-Programming-Fundamentals/Project%203%20-%20Minesweeper">
+							Minesweeper</a>
 						</h2>
 					</header>
 					<p>A recreation of the famous Minesweeper game, complete with debugging and test benches. This was built using 
