Updated about me and minor spelling

--- a/resume/index.html
+++ b/resume/index.html
@@ -35,13 +35,12 @@
 				</header>
 				
 				<p>
-					Hey, I'm Josh and I'm passionate about learning and creating. <br />
-					I'm an undergraduate at the University of Florida pursuing a Bachelors of Science degree
-					 in computer science. <br /> 
-					 I also have a Bachelors of Science degree in psychology from Washington State University. <br />
-					 My primary interests are in security, especially techniques and events in the reverse engineering scene. <br />
-					 Outside of academia I enjoy reading, hiking, camping, basketball and video/board games. <br />
-					 Feel free to see some of my work and profiles on 
+					Hello, my name is Joshua Smith and I am a recent computer science graduate <br />
+					My primary interests are scripting, security, and problem solving (automation, reverse engineering, offensive security) <br />
+					This webpage has some of the work I have done during my academic career. <br />
+					Feel free to browse around and follow the links to a few of my projects. <br />
+
+					 Also, be sure to check out some of my info on
 					 <a href="https://www.researchgate.net/profile/Joshua_Smith93">Research Gate</a>, 
 					 <a href="https://www.linkedin.com/in/joshuamainsmith/">LinkedIn</a>, 
 					 <a href="https://github.com/joshuamainsmith">GitHub</a>, 
@@ -136,7 +135,7 @@
 						<h2><a href="https://github.com/joshuamainsmith/Senior_Project">Senior Project</a>
 						</h2>
 					</header>
-					<p>Statically and dynamically analyzed Respondus LockDown Browser's binaries. We then used our our findings to bypass
+					<p>Statically and dynamically analyzed Respondus LockDown Browser's binaries. We then used our findings to bypass
 						LDB's security by creating software, such as a DLL injector and various scripts.
 					</p>
 					<p><a href="#first" class="style2">Back to Index</a></p>
